2005-08-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/__init__.py:
	  if using ltihooks, import interfaces and then uninstall our
	  module importer so we don't crap all over someone else's

2005-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/jukebox.py:
	  use the source's set_volume method
	  now we are releasing the correct request pad, good stuff.
	* gst/extend/sources.py:
	  add a set_volume and add a volume element internally

2005-08-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/jukebox.py:
	  set the done sources to NULL, so we don't keep the files open

2005-08-11  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/extend/jukebox.py:
	* gst/extend/leveller.py:
	* gst/extend/sources.py:
	  Chain up to self.__gobject_init__() in constructors for derived
	  objects, as this makes signals work in pygtk 2.4, 2.6 and 2.7

2005-08-11  Edward Hervey  <edward@fluendo.com>

	* gst/gst.override: (pygst_debug_log):
	Print the filename and not the full path

2005-08-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/jukebox.py:
	  implement volume scaling to make tracks match the target RMS

2005-08-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/jukebox.py:
	* gst/extend/leveller.py:
	* gst/extend/sources.py:
	  use python debugging

2005-08-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst.defs:
	* gst/gst.override:
	* gst/gstmodule.c: (init_gst):
	  backport debug wrapping from 0.9

2005-08-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/leveller.py:
	  take into account the total peak RMS when finding mixin/mixout 
	  add length, just because
	* gst/extend/sources.py:
	  add a prerolled signal
	* gst/gstbuffer.override:
	  wrap timestamp and duration as longs, not ints
	* gst/gstmodule.c: (init_gst):
	  register gst.CLOCK_TIME_NONE

2005-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>
