@@ -1,3 +1,8 @@
+2005-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/extend/leveller.py:
+	  add a .stop method to free resources by setting pipe to NULL
+
 2005-08-26  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/__init__.py:
